Fix word wrap bugs on mobile (<400px width)

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -18,8 +18,11 @@ header {
         display: block;
         margin: 10px auto;
         padding: 10px;
-        font-size: 3em;
+        font-size: 2.5em;
         font-weight: bold;
+        text-align: center;
+        word-break: anywhere;
+        word-wrap: anywhere;
     }
 
     nav {
